# weball

./: .gitignore  Anchor.toml  Cargo.toml  README.md  deploy.sh  package.json
lib/proc_macros/: Cargo.toml
programs/lottery/: Cargo.toml
programs/lottery/src/: lib.rs
programs/lottery/src/common/: errors.rs  mod.rs  try_math.rs  util.rs
programs/lottery/src/instructions/: burn.rs  buy_ticket.rs  close_bet_plan.rs  deposit_prize_pool.rs  draw_prize.rs  init_bet_plan.rs  init_dealer.rs  init_partner.rs  init_prize_draw.rs  init_prize_pool.rs  mod.rs  recycle_bonus.rs  redeem_ticket.rs  transfer_bonus.rs  update_dealer.rs  update_partner.rs  update_prize_pool.rs  withdraw_dealer.rs  withdraw_partner.rs  withdraw_team.rs
programs/lottery/src/state/: bet_plan.rs  dealer.rs  mod.rs  partner.rs  prize_draw.rs  prize_pool.rs  prize_ticket.rs  sb_vrf.rs
programs/lottery/src/vrf/: init_state.rs  mod.rs  update_result.rs
src/: index.ts
src/common/: account-utils.ts  index.ts  prize.ts  types.ts  utils.ts
src/lottery/: index.ts  lottery.client.ts  lottery.pda.ts
src/types/: lottery.ts
